<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:clipToPadding="false"
    android:padding="@dimen/page_padding"
    >

    <!-- Input group -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/capitalise_prompt"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/capitalise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capitalise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        />

    <include
        android:id="@+id/input_divider"
        layout="@layout/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/capitalise"
        />

    <!-- Result group -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/input_divider"
        >

        <TextView
            android:id="@+id/result"
            style="@style/Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Result"
            />

        <TextView
            android:id="@+id/device"
            style="@style/Device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/result"
            tools:text="Device"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/device"
            />

        <include
            android:id="@+id/result_divider"
            layout="@layout/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/close"
            />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/result"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Instructions -->
    <com.google.android.material.card.MaterialCardView
        style="@style/ProfileCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/result_group"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="11dp"
            >

            <TextView
                android:id="@+id/title"
                style="@style/ProfileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lambda_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/content"
                style="@style/ProfileContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lambda_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/source"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>