<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <ImageView
        android:id="@+id/home_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:src="@drawable/avatar"
        />

    <TextView
        android:id="@+id/home_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/home_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toEndOf="@id/home_image"
        app:layout_constraintTop_toTopOf="@id/home_image"
        />

    <TextView
        android:id="@+id/home_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_name"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/home_image"
        android:text="@string/home_email"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toBottomOf="@id/home_image"
        app:layout_constraintStart_toEndOf="@id/home_image"
        />

    <TextView
        android:id="@+id/home_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_image"
        android:layout_marginTop="16dp"
        android:text="@string/home_introduction"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_image"
        />

    <include
        android:id="@+id/divider"
        layout="@layout/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/home_introduction"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/profile_item"
        tools:itemCount="3"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
